--- a/P_ON/web/index.html
+++ b/P_ON/web/index.html
@@ -28,14 +28,14 @@
   <link rel="icon" type="image/png" href="favicon.png">
 
   <title>p_on</title>
-  <link rel="manifest" href="/manifest.json">
+  <link rel="manifest" href="/wanyviny/manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
     var serviceWorkerVersion = null;
   </script>
   <!-- This script adds the flutter initialization JS code -->
-  <script src="/flutter.js" defer></script>
+  <script src="/wanyviny/flutter.js" defer></script>
 
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
   
