--- a/P_ON/web/index.html
+++ b/P_ON/web/index.html
@@ -12,7 +12,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/wanyviny/">
+  <base href="/wanyviny">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -36,6 +36,7 @@
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="/wanyviny/flutter.js" defer></script>
+  <script src="main.dart.js" type="application/javascript"></script>
 
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
   
