--- a/P_ON/web/index.html
+++ b/P_ON/web/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head>
+<html><head>
   <!--
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
@@ -12,7 +12,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/wanyviny">
+  <base href="/wanyviny/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
