--- a/P_ON/web/index.html
+++ b/P_ON/web/index.html
@@ -1,4 +1,4 @@
-<html><head>
+<!DOCTYPE html><html><head>
   <!--
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
