--- a/P_ON/web/index.html
+++ b/P_ON/web/index.html
@@ -36,7 +36,7 @@
   </script>
   <!-- This script adds the flutter initialization JS code -->
 <!--  <script src="/wanyviny/flutter.js" defer></script>-->
-  <script src="/main.dart.js" type="application/javascript"></script>
+  <script src="/wanyviny/main.dart.js" type="application/javascript"></script>
 
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
   
@@ -136,7 +136,7 @@
     }
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
-      entrypointUrl: "/main.dart.js",
+      entrypointUrl: "wanyviny/main.dart.js",
       _flutter.loader.loadEntrypoint({
         serviceWorker: {
           serviceWorkerVersion: serviceWorkerVersion,
