--- a/P_ON/web/index.html
+++ b/P_ON/web/index.html
@@ -28,15 +28,15 @@
   <link rel="icon" type="image/png" href="favicon.png">
 
   <title>p_on</title>
-  <link rel="manifest" href="/wanyviny/manifest.json">
+  <link rel="manifest" href="manifest.json" type="application/json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
     var serviceWorkerVersion = null;
   </script>
   <!-- This script adds the flutter initialization JS code -->
-<!--  <script src="/wanyviny/flutter.js" defer></script>-->
-  <script src="/wanyviny/main.dart.js" type="application/javascript"></script>
+  <script src="flutter.js" type="application/javascript" defer></script>
+  <script src="main.dart.js" type="application/javascript"></script>
 
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
   
@@ -112,42 +112,42 @@
       <source srcset="splash/img/dark-1x.png 1x, splash/img/dark-2x.png 2x, splash/img/dark-3x.png 3x, splash/img/dark-4x.png 4x" media="(prefers-color-scheme: dark)">
       <img class="center" aria-hidden="true" src="splash/img/light-1x.png" alt="">
   </picture>
-<!--  <script>-->
-<!--    window.addEventListener('load', function(ev) {-->
-<!--      // Download main.dart.js-->
-<!--      _flutter.loader.loadEntrypoint({-->
-<!--        serviceWorker: {-->
-<!--          serviceWorkerVersion: serviceWorkerVersion,-->
-<!--        },-->
-<!--        onEntrypointLoaded: function(engineInitializer) {-->
-<!--          engineInitializer.initializeEngine().then(function(appRunner) {-->
-<!--            appRunner.runApp();-->
-<!--          });-->
-<!--        }-->
-<!--      });-->
-<!--    });-->
-<!--  </script>-->
   <script>
-  if ('serviceWorker' in navigator) {
-      window.addEventListener('flutter-first-frame', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=1417913520');
-        navigator.serviceWorker.register('flutter_service_worker.js');
-      });
-    }
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
-      entrypointUrl: "wanyviny/main.dart.js",
       _flutter.loader.loadEntrypoint({
         serviceWorker: {
           serviceWorkerVersion: serviceWorkerVersion,
         },
-        onEntrypointLoaded: function (engineInitializer) {
-          engineInitializer.initializeEngine().then(function (appRunner) {
+        onEntrypointLoaded: function(engineInitializer) {
+          engineInitializer.initializeEngine().then(function(appRunner) {
             appRunner.runApp();
           });
         }
       });
     });
   </script>
+<!--  <script>-->
+<!--  if ('serviceWorker' in navigator) {-->
+<!--      window.addEventListener('flutter-first-frame', function () {-->
+<!--        navigator.serviceWorker.register('flutter_service_worker.js?v=1417913520');-->
+<!--        navigator.serviceWorker.register('flutter_service_worker.js');-->
+<!--      });-->
+<!--    }-->
+<!--    window.addEventListener('load', function(ev) {-->
+<!--      // Download main.dart.js-->
+<!--      entrypointUrl: "wanyviny/main.dart.js",-->
+<!--      _flutter.loader.loadEntrypoint({-->
+<!--        serviceWorker: {-->
+<!--          serviceWorkerVersion: serviceWorkerVersion,-->
+<!--        },-->
+<!--        onEntrypointLoaded: function (engineInitializer) {-->
+<!--          engineInitializer.initializeEngine().then(function (appRunner) {-->
+<!--            appRunner.runApp();-->
+<!--          });-->
+<!--        }-->
+<!--      });-->
+<!--    });-->
+<!--  </script>-->
 
 </body></html>
