--- a/User/src/main/resources/static/index.html
+++ b/User/src/main/resources/static/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<a href="/oauth2/authorization/kakao?redirect_url=localhost:8080/">Kakao</a>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Title</title>
+    </head>
+    <body>
+        <a href="/oauth2/authorization/kakao">Kakao</a>
+    </body>
 </html>
